// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader should render correctly with props and children 1`] = `
.emotion-0 {
  margin-bottom: 10px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 10px;
  background-color: #06ba63;
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 0 0 10px 10px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1000;
}

.emotion-1 {
  background-color: transparent;
  border: none;
  color: white;
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0;
  padding: 0;
  cursor: pointer;
  position: absolute;
  left: 20px;
  top: 15px;
  width: 25px;
  height: 25px;
}

.emotion-2 {
  color: white;
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0;
  font-style: italic;
}

<div>
  <div
    class="emotion-0 row"
  >
    <button
      aria-label="Back"
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left "
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="d-flex justify-content-center col"
    >
      <h1
        class="emotion-2"
      >
        Contactpedia
      </h1>
    </div>
    <div
      class="d-flex justify-content-center col"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`AppHeader should render correctly without props 1`] = `
.emotion-0 {
  margin-bottom: 10px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 10px;
  background-color: #06ba63;
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 0 0 10px 10px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1000;
}

.emotion-1 {
  color: white;
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0;
  font-style: italic;
}

<div>
  <div
    class="emotion-0 row"
  >
    <div
      class="d-flex justify-content-center col"
    >
      <h1
        class="emotion-1"
      >
        Contactpedia
      </h1>
    </div>
  </div>
</div>
`;
